[package]
name = "libp2p-episub"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Karim Agha <karim.dev@gmail.com>"]
license = "MIT"
description = "Episub: Proximity Aware Epidemic PubSub for libp2p"
homepage = "https://github.com/terra-money/libp2p-episub"
repository = "https://github.com/terra-money/libp2p-episub"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchornous"]

[dependencies]
futures = "0.3.18"
libp2p-core = "0.30.0"
libp2p-swarm = "0.32.0"
tracing = "0.1.29"

[dev-dependencies]
chrono = "0.4.19"
structopt = "0.3"
tracing-subscriber = "0.3.3"
libp2p = { version = "0.41.0" }
anyhow = { version = "1.0.51" }
tokio = { version = "1.14.0", features = ["full"] }
