[package]
name = "libp2p-episub"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Karim Agha <karim.dev@gmail.com>"]
license = "MIT"
description = "Episub: Proximity Aware Epidemic PubSub for libp2p"
homepage = "https://github.com/terra-money/libp2p-episub"
repository = "https://github.com/terra-money/libp2p-episub"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchornous"]

[dependencies]
futures = "0.3.18"
libp2p-core = "0.30.0"
libp2p-swarm = "0.32.0"
tracing = "0.1.29"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]


[workspace]
members = [".", "node", "audit"]
default-members = [".", "node", "audit"]