[package]
name = "libp2p-episub"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Karim Agha <karim.dev@gmail.com>"]
license = "MIT"
description = "Episub: Proximity Aware Epidemic PubSub for libp2p"
homepage = "https://github.com/terra-money/libp2p-episub"
repository = "https://github.com/terra-money/libp2p-episub"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchornous"]

[dependencies]
futures = "0.3.18"
libp2p = "0.41.0"
tracing = "0.1.29"
prost = "0.9"
rand = "0.8"
thiserror = "1.0.30"
asynchronous-codec = "0.6"
unsigned-varint = { version = "0.7.0", features = ["asynchronous_codec"] }

[dev-dependencies]


[build-dependencies]
prost-build = "0.9"


[workspace]
members = [".", "node", "audit"]
default-members = [".", "node", "audit"]
